<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WIFIDirectActivity">
    <item
        android:id="@+id/atn_direct_send"
        android:title="@string/send_button"
        android:icon="@drawable/ic_action_send"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/atn_direct_enable"
        android:icon="@drawable/ic_action_on_off"
        android:title="@string/enable_p2p_button"
        android:orderInCategory="3"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/atn_direct_discover"
        android:icon="@drawable/ic_action_discover"
        android:title="@string/discover_peers_button"
        android:orderInCategory="2"
        android:showAsAction="ifRoom" />

</menu>