<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_device_name" />

        <TextView
            android:id="@+id/my_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peer_name" />

        <TextView
            android:id="@+id/peer_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:text="@string/mainTitle"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <fragment
        class="com.ssd227.android.automatic.FileListFragment"
        android:id = "@+id/frag_fileList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />





</LinearLayout>
